--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,7 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "wasm": "wasm-pack build ./my_game --target web"
+    "wasm": "wasm-pack build ./yet_another_dungeon_crawler --target web"
   },
   "devDependencies": {
     "@playwright/test": "^1.21.0",
