--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,8 @@
     "build": "svelte-kit build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
-    "prepare": "svelte-kit sync",
+    "prepare": "svelte-kit sync && sudo npm run smui-theme",
+    "smui-theme": "smui-theme compile static/smui.css -i src/theme",
     "test": "playwright test",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.21.0",
+    "@smui/button": "^6.0.0-beta.16",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
@@ -25,6 +27,7 @@
     "eslint-plugin-svelte3": "^3.2.1",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
+    "smui-theme": "^6.0.0-beta.16",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.10.1",
@@ -33,5 +36,14 @@
     "vite": "^2.9.5",
     "vite-plugin-wasm-pack": "^0.1.10"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@project-serum/anchor": "^0.22.1",
+    "@solana/wallet-adapter-base": "^0.9.2",
+    "@solana/wallet-adapter-wallets": "^0.14.2",
+    "@solana/web3.js": "^1.32.0",
+    "@svelte-on-solana/wallet-adapter-anchor": "^1.0.11-alpha.0",
+    "@svelte-on-solana/wallet-adapter-core": "^1.0.2-alpha.0",
+    "@svelte-on-solana/wallet-adapter-ui": "^1.0.11-alpha.0"
+  }
 }
