--- a/Anchor.toml
+++ b/Anchor.toml
@@ -15,4 +15,4 @@ cluster = "localnet"
 wallet = "/home/ceniei/.config/solana/id.json"
 
 [scripts]
-test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/DungeonNFT.ts --full-trace"
+test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/DungeonNFTAMM.ts"
