--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,14 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.3"
+    "nuxt": "3.0.0-rc.3",
+    "sass": "^1.52.1",
+    "sass-loader": "^13.0.0"
+  },
+  "dependencies": {
+    "@project-serum/anchor": "^0.25.0-beta.1",
+    "@solana/wallet-adapter-wallets": "^0.16.1",
+    "@solana/web3.js": "^1.43.5",
+    "solana-wallets-vue": "^0.3.2"
   }
 }
