--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -12,6 +12,9 @@
       "components/*": [
         "src/components/*"
       ],
+      "composables/*": [
+        "src/composables/*"
+      ],
       "layouts/*": [
         "src/layouts/*"
       ],
