--- a/app/package.json
+++ b/app/package.json
@@ -11,22 +11,24 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "pinia": "^2.0.11",
     "@quasar/extras": "^1.0.0",
+    "@solana/wallet-adapter-wallets": "^0.16.1",
+    "pinia": "^2.0.11",
     "quasar": "^2.6.0",
+    "solana-wallets-vue": "^0.3.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
+    "@quasar/app-vite": "^1.0.0",
+    "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
-    "eslint": "^8.10.0",
-    "eslint-plugin-vue": "^8.5.0",
-    "eslint-config-prettier": "^8.1.0",
-    "prettier": "^2.5.1",
-    "@types/node": "^12.20.21",
-    "@quasar/app-vite": "^1.0.0",
     "autoprefixer": "^10.4.2",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-vue": "^8.5.0",
+    "prettier": "^2.5.1",
     "typescript": "^4.5.4"
   },
   "engines": {
