--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "@solana/wallet-adapter-wallets": "^0.16.1",
+    "dotenv": "^16.0.1",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "solana-wallets-vue": "^0.3.2",
