--- a/app/package.json
+++ b/app/package.json
@@ -30,7 +30,9 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^8.5.0",
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "vite": "^3.0.4",
+    "vite-plugin-wasm-pack": "^0.1.12"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
